--- a/admin/config.yml
+++ b/admin/config.yml
@@ -4,15 +4,14 @@ backend:
 media_folder: static/img
 public_folder: /img
 collections:
-  - name: 'blog'
-    label: 'Blog'
-    folder: 'content/blog'
+  - name: 'teachers'
+    label: 'Преподавателям'
+    folder: 'content/teachers'
     create: true
     slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
     editor:
       preview: false
     fields:
-      - { label: 'Title', name: 'title', widget: 'string' }
-      - { label: 'Publish Date', name: 'date', widget: 'datetime' }
-      - { label: 'Description', name: 'description', widget: 'string' }
-      - { label: 'Body', name: 'body', widget: 'markdown' }
+      - { label: 'Заголовок', name: 'title', widget: 'string' }
+      - { label: 'Дата публикации', name: 'date', widget: 'datetime' }
+      - { label: 'Тело', name: 'body', widget: 'markdown' }
