--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,3 @@
-baseURL = "http://example.org/"
-languageCode = "en-us"
-title = "My New Hugo Site"
+baseURL = "http://kovalev.netlify.app/"
+languageCode = "ru-ru"
+title = "Персональная страница Ковалева Андрея Юрьевича"
